# mongo-sql

./: LICENSE  README.md  mongo-sql.cabal  query-transfuser.cabal  stack.yaml  talos.cabal
app/: Main.hs
src/: Lib.hs  Types.hs
src/Mongo/: Encoder.hs  Parser.hs
src/Sql/: Encoder.hs
src/Talos/: Lib.hs  Types.hs
src/Talos/Mongo/: Encoder.hs  Parser.hs
src/Talos/Sql/: Encoder.hs
src/Talos/Types/: Arbitrary.hs
src/Transfuser/: Lib.hs  Types.hs
src/Transfuser/Mongo/: Encoder.hs  Parser.hs
src/Transfuser/Sql/: Encoder.hs
src/Transfuser/Types/: Arbitrary.hs
src/Types/: Arbitrary.hs
test/: Spec.hs
