name:                mongo-sql
version:             0.1.0.0
synopsis:            Convert between MongoDB queries and SQL
description:         Please see README.md
homepage:            http://github.com/stephenpascoe/mongo-sql#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Pascoe
maintainer:          stephen.pascoe@lirico.co.uk
copyright:           BSD3
category:            unknown
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Types, Types.Arbitrary, Mongo.Parser, Mongo.Encoder, Sql.Encoder
  build-depends:       base >= 4.7 && < 5
                     , groom >= 0.1.2 && < 0.2
                     , simple-sql-parser >= 0.4.1 && < 0.6.0
                     , aeson >= 0.8.0.2 && < 0.11
                     , text >= 1.2.1.3 && < 1.3
                     , unordered-containers >= 0.2.5.1 && < 0.3
                     , scientific >= 0.3.3.8 && < 0.4
                     , attoparsec >= 0.12.1.6 && < 0.14
                     , vector >= 0.10.12.3 && < 0.12
                     , QuickCheck >= 2.8.1 && < 2.9
                     , raw-strings-qq >= 1.0 && < 2.0
                     , bson >= 0.3.2.1 && < 0.4
                     , bytestring >= 0.10.6.0 && < 0.11
                     , language-javascript >= 0.5.14.7 && < 0.7

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
--  ghc-options:         -Wall

executable mongo-sql-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mongo-sql
                     , aeson >= 0.8.0.2 && < 0.11
                     , bytestring >= 0.10.6.0 && < 0.11

  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

test-suite mongo-sql-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mongo-sql
                     , hspec >= 2.1.0 && < 2.3
                     , QuickCheck >= 2.8.1 && < 2.9
                     , aeson >= 0.8.0.2 && < 0.11
                     , text >= 1.2.1.3 && < 1.3
                     , unordered-containers >= 0.2.5.1 && < 0.3
                     , scientific >= 0.3.3.8 && < 0.4
                     , bytestring >= 0.10.6.0 && < 0.11
                     , raw-strings-qq >= 1.0 && < 2.0
                     , quickcheck-instances >= 0.3 && < 0.4
                     , bson >= 0.3.2.1 && < 0.4

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/stephenpascoe/mongo-sql
